--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="body">
           <div class="letter">
             <div class="heart">❤</div>
-            <p class="message">Will you always be my Valentine, Kat.</p>
+            <p class="message">Will you always be my Valentine, Kat?.</p>
           </div>
         </div>
       </div>
@@ -30,5 +30,4 @@
   <script src="script.js"></script>
   </main>
 </body>
-
 </html>
